# GridMode

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.main.json  tsconfig.renderer.json  vite.config.ts
.github/workflows/: release-windows.yml  tauri-spike.yml
docs/: tauri-cutover.md  tauri-spike.md
scripts/: create-electron-updater-yml.mjs  create-tauri-updater-json.mjs  stamp-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/main/: main.ts
src/preload/: preload.ts
src/renderer/: App.tsx  global.d.ts  gridModeApi.ts
src/renderer/components/: GridModeLogo.tsx
src/renderer/styles/: app.css
src/shared/: types.ts
