[package]
name = "gridmode_tauri_spike"
version = "0.1.0"
description = "GridMode Tauri performance spike"
authors = ["thedinz"]
license = "MIT"
repository = "https://github.com/thedinz/GridMode"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gridmode_tauri_spike_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
