[package]
name = "gridmode"
version = "0.1.9"
description = "GridMode is a desktop photo viewer built around your folders, EXIF dates, and fast visual wandering."
authors = ["thedinz"]
license = "MIT"
repository = "https://github.com/thedinz/GridMode"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gridmode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
image = { version = "0.24.9", default-features = false, features = ["bmp", "gif", "jpeg", "png", "tiff", "webp"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2.10.1"
